<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prefences_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/preferences_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/preferences_btn_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:minHeight="32dip"
            android:minWidth="32dip"
            android:onClick="Cancel_onClick"
            android:text="@string/button_cancel" />

        <!-- <Button -->
        <!-- android:id="@+id/preferences_btn_reload" -->
        <!-- style="?android:attr/buttonStyleSmall" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_margin="0dp" -->
        <!-- android:minHeight="32dip" -->
        <!-- android:minWidth="32dip" -->
        <!-- android:onClick="Reload_onClick" -->
        <!-- android:text="@string/button_reload" /> -->

        <Button
            android:id="@+id/preferences_btn_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:minHeight="32dip"
            android:minWidth="32dip"
            android:onClick="Save_onClick"
            android:text="@string/button_save" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/preferences_layout_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/preferences_layout_datatable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/preferences_row_min_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_min_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_min_age"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/preferences_txt_min_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:id="@+id/preferences_row_max_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_max_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_max_age"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/preferences_txt_max_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:id="@+id/preferences_row_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_gender"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/preferences_btn_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Gender_onClick"
                    android:text="@string/preferences_multi_btn" />
            </TableRow>
            
            <TableRow
                android:id="@+id/preferences_row_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_area"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/preferences_btn_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Area_onClick"
                    android:text="@string/preferences_multi_btn" />
            </TableRow>

            <TableRow
                android:id="@+id/preferences_row_drinking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_drinking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_drinking"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/preferences_btn_drinking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Drinking_onClick"
                    android:text="@string/preferences_multi_btn" />
            </TableRow>
            
            <TableRow
                android:id="@+id/preferences_row_smoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_lbl_smoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/preferences_smoking"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/preferences_btn_smoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Smoking_onClick"
                    android:text="@string/preferences_multi_btn" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>